ApplyTMTemplate 4.0.1.0 - SDLCOM-6420: econd template on an existing Translation Memory. - Updated Excel and SDLTMS imports to use language resources, preventing modification of bundles with non-targeted languages. - Fixed IndexOutOfRangeException in MainWindowViewModel when adding files.
### New Features:
- Added a **Save Preferences** button in the main view.
- Added a **Select Settings File** button on the top input.
- Cached the settings file every time a new file is saved or loaded.
- Added a new **Merge/Overwrite Properties** selection button for Translation Memories.

--- a/ApplyTMTemplate/Sdl.Community.ApplyTMTemplate/Sdl.Community.ApplyTMTemplate.csproj
+++ b/ApplyTMTemplate/Sdl.Community.ApplyTMTemplate/Sdl.Community.ApplyTMTemplate.csproj
@@ -7,6 +7,9 @@
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
 		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
 	</PropertyGroup>
+	<ItemGroup>
+	  <None Remove="Resources\ProjectTemplate.ico" />
+	</ItemGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -78,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Checked.png" />
+    <Resource Include="Resources\ProjectTemplate.ico" />
     <Resource Include="Resources\Unchecked.ico" />
     <Resource Include="Resources\AddFolder.png" />
     <Resource Include="Resources\TM.ico" />
