Add comment functionality (both ways) finished ChangeStatus finished

--- a/Post Edit Compare/Sdl.Community.PostEdit.Versions.csproj
+++ b/Post Edit Compare/Sdl.Community.PostEdit.Versions.csproj
@@ -103,7 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="HTMLReportIntegration\ReportView\Controls\Scripts.js">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Add.ico" />
     <Content Include="Resources\Compare.ico" />
