ReportsViewerPlus 4.0.2.0 - SDLCOM-5305: - Modified ReportsController to support updates on existing reports. - Updated BrowserView.xaml.cs for custom context menu and in-progress loading display. - Created separate ViewModel for BrowserView. - Refactored ViewModels (DataViewModel, NavigationReportViewModel, BrowserViewModel) to inherit from a new base ViewModel class, improving code readability.

--- a/Reports.Viewer/Reports.Viewer/Reports.Viewer.csproj
+++ b/Reports.Viewer/Reports.Viewer/Reports.Viewer.csproj
@@ -117,7 +117,9 @@
     <Compile Include="TellMe\SourceCodeAction.cs" />
     <Compile Include="TellMe\TellMeProvider.cs" />
     <Compile Include="ViewModel\AppendTemplateViewModel.cs" />
+    <Compile Include="ViewModel\BrowserViewModel.cs" />
     <Compile Include="ViewModel\DataViewModel.cs" />
+    <Compile Include="ViewModel\ReportsViewModelBase.cs" />
     <Compile Include="ViewModel\ReportViewModel.cs" />
     <Compile Include="ViewModel\ReportsNavigationViewModel.cs" />
     <Compile Include="ViewModel\AppendReportViewModel.cs" />
