--- a/Post Edit Compare/Sdl.Community.PostEdit.Versions.csproj
+++ b/Post Edit Compare/Sdl.Community.PostEdit.Versions.csproj
@@ -41,18 +41,151 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\**" />
-    <Compile Remove="Sdl.Community.PostEdit.Compare.DAL\**" />
-    <Compile Remove="Sdl.Community.PostEdit.Compare\**" />
-    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare.Core\**" />
-    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare.DAL\**" />
-    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\**" />
-    <None Remove="Sdl.Community.PostEdit.Compare.Core\**" />
-    <None Remove="Sdl.Community.PostEdit.Compare.DAL\**" />
-    <None Remove="Sdl.Community.PostEdit.Compare\**" />
-    <Page Remove="Sdl.Community.PostEdit.Compare.Core\**" />
-    <Page Remove="Sdl.Community.PostEdit.Compare.DAL\**" />
-    <Page Remove="Sdl.Community.PostEdit.Compare\**" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Comparison\Comparer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Comparison\ComparisonFileUnit.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Comparison\ComparisonParagraphUnit.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Comparison\ComparisonSegmentUnit.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Comparison\PairedFiles.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Comparison\Text\ComparisionTextUnit.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Comparison\Text\TextComparer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Helper\Capitalization.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Helper\ExcelReportHelper.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Helper\PemExcelReportHelper.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Helper\TerpExcelReportHelper.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\obj\Debug\.NETFramework,Version=v4.8.AssemblyAttributes.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Processor.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Properties\AssemblyInfo.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Reports\FileInformationExcelReport.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Reports\PemExcelReport.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Reports\Report.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Reports\ReportUtils.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Reports\TerpExcelReport.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\Comment.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\ContentGenerator.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\ContentProcessor.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\ContentWriter.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\ParagraphUnit.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\Parser.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\RevisionMarker.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\SegmentPair.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\SegmentSection.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\TagUnit.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\TagUnitWarning.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\SDLXLIFF\TranslationOrigin.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Settings.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.Core\Terp.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.DAL\ExcelTableModel\Constants.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.DAL\PostEditModificationsAnalysis\FilesInformationModel.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.DAL\PostEditModificationsAnalysis\PEMModel.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.DAL\PostEditModificationsAnalysis\PEMTotalCost.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.DAL\PostEditModificationsAnalysis\TERpModel.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.DAL\PostEditModificationsAnalysis\TERpTotalValues.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.DAL\PostEditModificationsAnalysis\VersionDetails.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare.DAL\Properties\AssemblyInfo.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Automation\AutomationComunicationSettings.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Automation\SettingsSerializer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Cache\Application.Cache.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\ComboboxItem.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Common.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\DataGridViewRichTextBox\DataGridViewRichTextBoxColumn.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\DataGridViewRichTextBox\RichTextBoxPrinter.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\FolderSelectDialog.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\FormMain.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\FormMain.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\AppendAnlaysisBand.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\AppendAnlaysisBand.designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\AppendMultiplePrices.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\AppendMultiplePrices.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\ComparisonProject.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\ComparisonProject.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\ComparisonProjectFileAlignment.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\ComparisonProjectFileAlignment.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\CopyFiles.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\CopyFiles.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\CopyFilesToFolder.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\CopyFilesToFolder.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\DeleteFiles.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\DeleteFiles.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\FileViewer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\FileViewer.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\FilterAppend.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\FilterAppend.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\FormSettingsFormatting.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\FormSettingsFormatting.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\MoveFiles.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\MoveFiles.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\PriceAppend.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\PriceAppend.designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\PriceGroupsGroup.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\PriceGroupsGroup.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\ReportViewer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\ReportViewer.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\ReportWizard.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\ReportWizard.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\Settings.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Forms\Settings.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\ListViewSortManager\ListViewSortManager.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Model\DataNode.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Model\FileType.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Model\IModel.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Model\Model.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\obj\Debug\.NETFramework,Version=v4.8.AssemblyAttributes.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\FormMain.PanelManager.CompareList.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_CompareLog.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_CompareLog.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_CompareProject.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_CompareProject.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_ComparisonProjects.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_ComparisonProjects.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_FileViewer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_FileViewer.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_FileViewerComments.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_FileViewerComments.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_ReportViewer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_ReportViewer.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_ReportViewerNavigation.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_ReportViewerNavigation.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Program.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\ProgressCore.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\ProgressDialog.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\ProgressDialog.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\ProgressObject.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Properties\AssemblyInfo.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Properties\Resources.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Properties\Settings.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\Settings.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\SkipSettingsWindow.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\SkipSettingsWindow.Designer.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\WaitingDialog.cs" />
+    <Compile Remove="Sdl.Community.PostEdit.Compare\WaitingDialog.Designer.cs" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\FormMain.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\AppendAnlaysisBand.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\AppendMultiplePrices.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\ComparisonProject.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\ComparisonProjectFileAlignment.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\CopyFiles.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\CopyFilesToFolder.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\DeleteFiles.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\FileViewer.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\FilterAppend.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\FormSettingsFormatting.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\MoveFiles.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\PriceAppend.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\PriceGroupsGroup.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\ReportViewer.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\ReportWizard.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Forms\Settings.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_CompareLog.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_CompareProject.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_ComparisonProjects.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_FileViewer.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_FileViewerComments.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_ReportViewer.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\PanelManager\Panel_ReportViewerNavigation.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\ProgressDialog.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\Properties\Resources.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\SkipSettingsWindow.resx" />
+    <EmbeddedResource Remove="Sdl.Community.PostEdit.Compare\WaitingDialog.resx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Web.WebView2.Core">
@@ -106,6 +239,11 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Sdl.Community.PostEdit.Compare.DAL\" />
+  </ItemGroup><ItemGroup>
+    <Folder Include="Sdl.Community.PostEdit.Compare.Core\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="PostEditCompareViewPartControl.cs">
