Language Weaver Provider 2.0.5.1 - SRQ-27649: - Updated plugin to enchance compatibility with Citrix environments

--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -155,6 +155,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Include="Microsoft.Web.WebView2.Core" />
+		<None Include="Microsoft.Web.WebView2.Wpf" />
+	</ItemGroup>
+	
+	<ItemGroup>
 		<None Include="Studio\TranslationProvider\TranslationProviderWinFormsUI.cs" />
 		<None Include="Studio\TranslationProvider\TranslationProviderLanguageDirection.cs" />
 		<None Include="Studio\TranslationProvider\TranslationProvider.cs" />
