ReportViewer: Export to Excel

--- a/Post Edit Compare/Sdl.Community.PostEdit.Compare.Versions/Sdl.Community.PostEdit.Versions.csproj
+++ b/Post Edit Compare/Sdl.Community.PostEdit.Compare.Versions/Sdl.Community.PostEdit.Versions.csproj
@@ -139,6 +139,8 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.2.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.72" />
     <PackageReference Include="Sdl.Core.PluginFramework">
       <Version>2.1.0</Version>
     </PackageReference>
