Amazon Translate MT provider 5.0.1.0 - SDLCOM-6469: - Modified the Translation Unit to NMT - Enhanced the Search Segment to prevent returning a hardcoded translation for already translated segments - Updated the CreateSearchResult method to include a Translation Proposal

--- a/Amazon Translate MT provider/Sdl.Community.AmazonTranslateTradosPlugin.csproj
+++ b/Amazon Translate MT provider/Sdl.Community.AmazonTranslateTradosPlugin.csproj
@@ -73,7 +73,7 @@
 	
 	<ItemGroup>
 		<Content Include="Resources\%24this.Icon.ico" />
-		<EntityDeploy Include="Resources\AmazonTranslate.ico" />
+		<None Include="Resources\AmazonTranslate.ico" />
 		<None Include="Resources\Question.ico" />
 		<None Include="Resources\ForumIcon.ico" />
 		<None Include="Resources\Download.ico" />
