--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/Sdl.Community.PostEdit.Versions.csproj
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/Sdl.Community.PostEdit.Versions.csproj
@@ -115,6 +115,7 @@
     </Content>
     <Content Include="Resources\Add.ico" />
     <Resource Include="Resources\AddReportFolder.ico" />
+    <Resource Include="Resources\Close.png" />
     <Resource Include="Resources\Compare.ico" />
     <Content Include="Resources\Download.ico" />
     <Content Include="Resources\Edit.ico" />
@@ -154,6 +155,7 @@
   <ItemGroup>
     <None Remove="HTMLReportIntegration\ReportView\Controls\Scripts.js" />
     <None Remove="Resources\AddReportFolder.ico" />
+    <None Remove="Resources\Close.png" />
     <None Remove="Resources\Filter.ico" />
     <None Remove="Resources\OpenReportFolder.ico" />
     <None Remove="Resources\Project.png" />
